src/collector/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: collector
  namespace: monitoring
spec:
  ports:
    - port: 4318
      name: otpl-http
      protocol: TCP
      targetPort: otpl-http
  selector:
    app: collector
  sessionAffinity: None
  type: ClusterIP
---
