src/collector/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: collector
  namespace: monitoring
spec:
  rules:
    - host: collector.nett.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  collector
                port:
                  number: 4318
---
